skillhub集成测试